# Junban

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  install.sh  llms.txt  package.json  pnpm-lock.yaml  sources.json  tsconfig.cli.json  tsconfig.json  tsconfig.node-sidecar.json  vite-api-plugin.ts  vite.config.ts  vitest.config.ts
.claude/agents/: domain-fixer.md  dx-auditor.md  perf-auditor.md  quality-auditor.md  security-auditor.md  swarm-reviewer.md
.github/: SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml
.swarm/reports/: FINAL_REPORT.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  PLUGIN_API.md  PLUGIN_EXAMPLES.md  README.md  ROADMAP.md  SECURITY.md  SETUP_LOCAL.md  index.md  manifest.md
docs/backend/: AI.md  CLI.md  CORE.md  DATABASE.md  FILES.md  MCP.md  PARSER.md  PLUGINS.md  STORAGE.md  UTILS.md  VOICE.md
docs/development/: ARCHITECTURE.md  CONTRIBUTING.md  SETUP_LOCAL.md  STATUS.md  UX_REFERENCES.md
docs/explanation/: architecture.md
docs/frontend/: API_LAYER.md  COMPONENTS.md  CONTEXT.md  FILES.md  (+4 more)
scripts/: build-cli.mjs  create-plugin.ts  docs-check.ts  install-linux.sh  prepare-release.ts  prepare-tauri-sidecar.mjs  run-with-profile.mjs
src/: bootstrap-web-ai-runtime.ts  bootstrap-web.ts  bootstrap.ts  main.ts  server.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tauri_paths.rs
vite-api-routes/: ai.ts
(+639 files in other folders)
