[package]
name = "asf-docket"
version = "1.0.0"
description = "ASF Docket — Open-source task management with an Obsidian-style plugin system"
authors = ["ASF Community"]
edition = "2021"

[lib]
name = "asf_docket_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
