[package]
name = "asf-saydo"
version = "1.0.0"
description = "ASF Saydo — Open-source task management with an Obsidian-style plugin system"
authors = ["ASF Community"]
edition = "2021"

[lib]
name = "asf_saydo_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "=2.5.5", features = [] }

[dependencies]
tauri = { version = "=2.10.2", features = [] }
tauri-plugin-fs = "=2.4.5"
tauri-plugin-updater = "=2.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
